hubspot forms double check alignment fix

--- a/style/form-standalone.scss
+++ b/style/form-standalone.scss
@@ -88,7 +88,7 @@ body {
 	}
 
 	a {
-		color: $color__link;
+		color: inherit;
 	}
 
 	input[type="text"],
@@ -110,12 +110,7 @@ body {
 	select {
 		background: #fff;
 		max-width: none;
-		border: 1px solid $color__border-input;
 		width: 100% !important;
-
-		&:focus {
-			border: 1px solid $color__corporate;
-		}
 	}
 
 	.hs-submit {
@@ -124,6 +119,10 @@ body {
 		input {
 			border-color: $color__corporate;
 		}
+	}
+
+	input[type="submit"] {
+		border: none;
 	}
 
 	.form-columns-1 .hs-form-field .input {
@@ -164,18 +163,18 @@ body {
 
 	input[type="radio"].hs-input {
 		border: 2px solid #fff;
-		box-shadow: 0 0 0 2px $color__corporate;
+		box-shadow: 0 0 0 2px #000;
 		height: 1em !important;
 		width: 1em !important;
 		margin-left: 2px;
 
 		&:checked {
-			box-shadow: 0 0 0 2px $color__corporate;
+			box-shadow: 0 0 0 2px #000;
 		}
 	}
 
 	input[type="checkbox"] {
-		border: 2px solid $color__corporate;
+		border: 2px solid;
 		height: 1.25em !important;
 		width: 1.25em !important;
 		border-radius: 3px;
@@ -183,14 +182,33 @@ body {
 
 	.legal-consent-container {
 		margin: 20px 0 10px;
-		background: #f5f5f5;
-		padding: 15px 15px 10px;
+		background: rgba(0,0,0,.03);
+		padding: 5px 15px 8px;
 		border-radius: 8px;
 
 		.hs-richtext,
 		label {
 			@include font-size(.7);
 			line-height: 1.3em;
+		}
+		
+		label {
+			min-height: 25px;
+
+			input[type="checkbox"],
+			span {
+				vertical-align: middle;
+			}
+			
+			input[type="checkbox"] {
+				float: none;
+				display: inline-block;
+			}
+			
+			span {
+				display: inline;
+				margin-left: 0;
+			}
 		}
 
 		.inputs-list {
@@ -228,10 +246,6 @@ body {
 
 		.legal-consent-container {
 			background: rgba(0,0,0,.08);
-		}
-
-		.hs-error-msgs label {
-			color: $color__corporate;
 		}
 
 		label,
